import org.gradle.internal.os.OperatingSystem

// ponytail: Project.exec() was removed in Gradle 9 (replaced by injected
// ExecOperations, which plain build scripts can't easily get at). ProcessBuilder
// is stdlib and version-proof, so every "run this external command" task below
// goes through here instead of chasing the Gradle exec API across versions.
def runCmd(List<String> command, File workDir = null, File redirectOut = null) {
    def pb = new ProcessBuilder(command.collect { it.toString() })
    if (workDir != null) pb.directory(workDir)
    pb.redirectError(ProcessBuilder.Redirect.INHERIT)
    pb.redirectOutput(redirectOut != null ? ProcessBuilder.Redirect.to(redirectOut) : ProcessBuilder.Redirect.INHERIT)
    def exitCode = pb.start().waitFor()
    if (exitCode != 0) {
        throw new GradleException("Command failed (exit ${exitCode}): ${command.join(' ')}")
    }
}

plugins {
    id 'java'
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'net.minecraftforge.gradle' version '[7.0.17,8)'
}

version = mod_version
group = mod_group_id

base {
    archivesName = mod_id
}

// Mojang ships Java 25 to end users in 26.1+, so your mod should target Java 25.
java.toolchain.languageVersion = JavaLanguageVersion.of(25)

println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}"
minecraft {
    runs {
        configureEach {
            workingDir = layout.projectDirectory.dir('run')

            systemProperty 'eventbus.api.strictRuntimeChecks', 'true'
            systemProperty 'forge.enabledGameTestNamespaces', mod_id
        }

        register('client')

        register('server') {
            args '--nogui'
        }

        register('gameTestServer')

        register('data') {
            workingDir = layout.projectDirectory.dir('run-data')

            args '--mod', mod_id, '--all', '--output', layout.projectDirectory.dir('src/generated/resources'), '--existing', layout.projectDirectory.dir('src/main/resources')
        }
    }
}

// Include resources generated by data generators.
sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {
    minecraft.mavenizer(it)
    maven fg.forgeMaven
    maven fg.minecraftLibsMaven
    mavenCentral()
}

dependencies {
    implementation minecraft.dependency("net.minecraftforge:forge:${minecraft_version}-${forge_version}")
    annotationProcessor 'net.minecraftforge:eventbus-validator:7.0.1'
}

// This block of code expands all declared replace properties in the specified resource targets.
// A missing property will result in an error. Properties are expanded using ${} Groovy notation.
// When "copyIdeResources" is enabled, this will also run before the game launches in IDE environments.
// See https://docs.gradle.org/current/dsl/org.gradle.language.jvm.tasks.ProcessResources.html
tasks.named('processResources', ProcessResources).configure {
    dependsOn zipWeb
    var replaceProperties = [
            minecraft_version: minecraft_version, minecraft_version_range: minecraft_version_range,
            forge_version: forge_version, forge_version_range: forge_version_range,
            loader_version_range: loader_version_range,
            mod_id: mod_id, mod_name: mod_name, mod_license: mod_license, mod_version: mod_version,
            mod_authors: mod_authors, mod_description: mod_description,
    ]
    inputs.properties replaceProperties

    filesMatching(['META-INF/mods.toml', 'pack.mcmeta']) {
        expand replaceProperties + [project: project]
    }
}

// Example for how to get properties into the manifest for reading at runtime.
tasks.named('jar', Jar).configure {
    manifest {
        attributes([
            'Specification-Title'     : mod_id,
            'Specification-Vendor'    : mod_authors,
            'Specification-Version'   : '1', // We are version 1 of ourselves
            'Implementation-Title'    : project.name,
            'Implementation-Version'  : project.jar.archiveVersion,
            'Implementation-Vendor'   : mod_authors
        ])
    }
}

// However if you are in a multi-project build, dev time needs unobfed jar files, so you can delay the obfuscation until publishing by doing:
// tasks.named('publish').configure {
//     dependsOn 'reobfJar'
// }

// Example configuration to allow publishing using the maven-publish plugin
publishing {
    publications {
        register('mavenJava', MavenPublication) {
            artifact jar
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/mcmodsrepo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}

eclipse {
    // Run everytime eclipse builds the code
    //autoBuildTasks genEclipseRuns
    // Run when importing the project
    synchronizationTasks 'genEclipseRuns'
}

// Merge the resources and classes into the same directory. 
// This is done because java expects modules to be in a single directory.
// And if we have it in multiple we have to do performance intensive hacks like having the UnionFileSystem
// This will eventually be migrated to ForgeGradle so modders don't need to manually do it. But that is later.
sourceSets.each {
    def dir = layout.buildDirectory.dir("sourcesSets/$it.name")
    it.output.resourcesDir = dir
    it.java.destinationDirectory = dir
}


// Extra tasks for MineCam dev

task zipWeb(type: Zip) {
    group 'minecam util'

    from "${project.projectDir}/../minecam-web"
    include '*'
    include '*/*'
    archiveFileName = 'minecam-web.zip'
    destinationDirectory = file("${project.projectDir}/src/main/resources/assets/minecam")
}

task deleteWeb(type: Delete) {
    group 'minecam util'

    delete "${project.projectDir}/src/main/resources/assets/minecam/minecam-web.zip"
}

task compileWeb {
    group 'minecam compile'

    dependsOn deleteWeb
    finalizedBy zipWeb
}

task deleteWebServer(type: Delete) {
    group 'minecam util'

    delete "${project.projectDir}/src/main/resources/assets/minecam/MineCamWebServer.jar"
}

task copyWebServer(type: Copy) {
    group 'minecam util'

    from "${project.projectDir}/../minecam-webserver/build/libs/"
    into "${project.projectDir}/src/main/resources/assets/minecam/"
    include "minecam-webserver-1.0-SNAPSHOT.jar"
    rename "minecam-webserver-1.0-SNAPSHOT.jar", "MineCamWebServer.jar"
}

task compileWebServer {
    group 'minecam compile'

    dependsOn deleteWebServer

    doLast {
        def webserverDir = file("${project.projectDir}/../minecam-webserver/")
        if (OperatingSystem.current().isWindows()) {
            runCmd(["${webserverDir}/gradlew.bat", 'jar'], webserverDir)
        }
        else {
            runCmd(['chmod', '+x', './gradlew'], webserverDir)
            runCmd(["${webserverDir}/gradlew", 'jar'], webserverDir)
        }
    }

    finalizedBy copyWebServer
}

task prepareAppDev {
    group 'minecam util'

    doLast {
        if (OperatingSystem.current().isWindows()) {
            runCmd(['npm.cmd', 'install'], file("${project.projectDir}/../minecam-app/"))
        }
        else {
            println "This command can only be run on Windows"
        }
    }
}

task openAppDev {
    group 'minecam util'

    doLast {
        if (OperatingSystem.current().isWindows()) {
            runCmd(['npx.cmd', 'tauri', 'dev'], file("${project.projectDir}/../minecam-app/"))
        }
        else {
            println "This command can only be run on Windows"
        }
    }
}

task buildApp {
    group 'minecam util'

    doLast {
        if (OperatingSystem.current().isWindows()) {
            runCmd(['npx.cmd', 'tauri', 'build'], file("${project.projectDir}/../minecam-app/"))
        }
        else {
            println "This command can only be run on Windows"
        }
    }
}

task deleteApp(type: Delete) {
    group 'minecam util'

    delete "${project.projectDir}/src/main/resources/assets/minecam/MineCam.exe"
}

task moveApp (type: Copy) {
    group 'minecam util'

    dependsOn deleteApp
    from "${project.projectDir}/../minecam-app/src-tauri/target/release/"
    into "${project.projectDir}/src/main/resources/assets/minecam/"
    include "MineCam.exe"
}

task compileApp {
    group 'minecam compile'

    dependsOn buildApp
    finalizedBy moveApp
}

task compileMacOSHelper {
    group 'minecam compile'

    doLast {
        if (OperatingSystem.current().isMacOsX()) {
            runCmd(["${project.projectDir}/../minecam-macoshelper/compileHelper.sh"], file("${project.projectDir}/../minecam-macoshelper"))
        }
        else {
            println "This command can only be run on MacOS"
        }
    }
}

// Prebuilt binaries live on the "resources" branch (link.rishabhroy.com used to
// mirror them but that domain is retired) since they aren't buildable from this
// repo alone on every platform (e.g. MineCam.exe needs Windows).
def fetchStaticResource(String branchPath, File dest) {
    if (dest.exists()) return
    runCmd(['git', 'show', "origin/resources:${branchPath}"], null, dest)
}

task downloadStaticResources {
    group 'minecam compile'

    doLast {
        runCmd(['git', 'fetch', 'origin', 'resources'])
        fetchStaticResource('MicrosoftEdgeWebview2Setup.exe', file("${project.projectDir}/src/main/resources/assets/minecam/MicrosoftEdgeWebview2Setup.exe"))
        fetchStaticResource('MineCamHelper', file("${project.projectDir}/src/main/resources/assets/minecam/MineCamHelper"))
        fetchStaticResource('MineCam.exe', file("${project.projectDir}/src/main/resources/assets/minecam/MineCam.exe"))
        fetchStaticResource('MineCamWebServer.jar', file("${project.projectDir}/src/main/resources/assets/minecam/MineCamWebServer.jar"))
    }
}

task minecamPrepare {
    group 'minecam util'

    dependsOn compileWeb
    finalizedBy downloadStaticResources
}

task minecamJar {
    group 'minecam'

    dependsOn minecamPrepare
    finalizedBy jar
}

task minecamRunClient {
    group 'minecam'

    dependsOn minecamPrepare
    doLast {
        if (OperatingSystem.current().isWindows()) {
            runCmd(["${project.projectDir}/gradlew.bat", 'runClient'], project.projectDir)
        }
        else {
            runCmd(['chmod', '+x', './gradlew'], project.projectDir)
            runCmd(["${project.projectDir}/gradlew", 'runClient'], project.projectDir)
        }
    }
}